--- a/mint.css
+++ b/mint.css
@@ -21,7 +21,6 @@ header{
     padding: 8px 10px;
     box-sizing: border-box;
     gap: 4px;
-    justify-content: flex-end;
 }
 
 header button{
@@ -36,6 +35,7 @@ header button{
 .icon-button {
     width: 27px !important;
     height: 27px !important;
+    aspect-ratio: 1 / 1;
     font-size: 0;
     --size: center / 16px no-repeat;
     background: var(--image);
@@ -153,7 +153,8 @@ output>span.katex {
     }
     @supports selector(::-webkit-scrollbar){
         * {
-            scrollbar-color: auto;
+            scrollbar-color: auto !important;
+            scrollbar-width: unset !important;
         }
     }
 }
