--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@ header{
     width: 100%;
     height: 60px;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
+    overflow: auto hidden;
+    scrollbar-width: thin;
 }
 
 #file-input{
